Gap Fix

--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ ul#emailList {
   display: flex;              /* use flexbox for alignment */
   justify-content: center;    /* center horizontally */
   align-items: left;        /* vertically align icon + text */
-  gap: 8px;                   /* spacing between icon and text */
+  gap: 2px;                   /* spacing between icon and text */
   margin-top: 10px;
   font-size: 18px;
   font-weight: bold;
